@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: ipmipower.8.in,v 1.22 2006-02-17 19:34:34 chu11 Exp $
+\."$Id: ipmipower.8.in,v 1.23 2006-02-18 00:28:25 chu11 Exp $
 \."#############################################################################
 \."  Copyright (C) 2003 The Regents of the University of California.
 \."  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -132,7 +132,7 @@ of
 Sets the authentication type to use with 
 .B ipmipower.  
 The currently available authentication types are "auto", "none",
-"straight_passwd_key", "md2", and "md5".  If not specified, 
+"straight_password_key", "md2", and "md5".  If not specified, 
 .B ipmipower
 uses "auto" authentication, which will automatically select the most
 secure authentication mechanism available from the remote machine.
@@ -365,7 +365,7 @@ quit
 .B ipmipower.
 .TP
 .I "authtype str"
-specify a new authentication type, auto, none, straight_passwd_key, md2, or md5.
+specify a new authentication type, auto, none, straight_password_key, md2, or md5.
 .TP
 .I "privilege str"
 specify a new privilege type, auto, user, operator or admin.
