@@ -70,17 +70,17 @@ extern "C" {
         (((__channel_number+1) >= IPMI_CHANNEL_SINGLE_SESSION \
           && (__channel_number-1) <= IPMI_CHANNEL_CURRENT_CHANNEL) ? 1 : 0)
 
-#define IPMI_AUTHENTICATION_TYPE_NONE                0x00
-#define IPMI_AUTHENTICATION_TYPE_MD2                 0x01
-#define IPMI_AUTHENTICATION_TYPE_MD5                 0x02
-#define IPMI_AUTHENTICATION_TYPE_STRAIGHT_PASSWD_KEY 0x04
-#define IPMI_AUTHENTICATION_TYPE_OEM_PROP            0x05
+#define IPMI_AUTHENTICATION_TYPE_NONE                  0x00
+#define IPMI_AUTHENTICATION_TYPE_MD2                   0x01
+#define IPMI_AUTHENTICATION_TYPE_MD5                   0x02
+#define IPMI_AUTHENTICATION_TYPE_STRAIGHT_PASSWORD_KEY 0x04
+#define IPMI_AUTHENTICATION_TYPE_OEM_PROP              0x05
 
 #define IPMI_AUTHENTICATION_TYPE_VALID(__authentication_type) \
         (((__authentication_type) == IPMI_AUTHENTICATION_TYPE_NONE \
           || (__authentication_type) == IPMI_AUTHENTICATION_TYPE_MD2 \
           || (__authentication_type) == IPMI_AUTHENTICATION_TYPE_MD5 \
-          || (__authentication_type) == IPMI_AUTHENTICATION_TYPE_STRAIGHT_PASSWD_KEY \
+          || (__authentication_type) == IPMI_AUTHENTICATION_TYPE_STRAIGHT_PASSWORD_KEY \
           || (__authentication_type) == IPMI_AUTHENTICATION_TYPE_OEM_PROP) ? 1 : 0) 
 
 #define IPMI_PRIVILEGE_LEVEL_RESERVED     0x00
